[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/icons/Add.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/2D.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/Stop.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/Script.svg" type="Texture" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://scripts/editor/editor.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/MainPlay.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/3D.svg" type="Texture" id=8]
[ext_resource path="res://assets/icons/Pause.svg" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=2605]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
draw_center = false
border_width_bottom = 1
border_color = Color( 0.41, 0.61, 0.91, 1 )

[sub_resource type="StyleBoxFlat" id=2602]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.2, 0.23, 0.31, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.1, 0.115, 0.155, 1 )
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2601]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.125, 0.14375, 0.19375, 1 )
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2599]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 4.0
content_margin_bottom = 2.0
bg_color = Color( 0.2, 0.23, 0.31, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.1, 0.115, 0.155, 1 )

[sub_resource type="StyleBoxEmpty" id=2606]

[node name="Editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
theme_type_variation = "BackgroundPanel"
script = ExtResource( 6 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 590.0

[node name="Titlebar" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 1014.0
margin_bottom = 28.0

[node name="Left" type="HBoxContainer" parent="Margin/VBox/Titlebar"]
margin_right = 335.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="SceneMenu" type="MenuButton" parent="Margin/VBox/Titlebar/Left"]
margin_right = 51.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 2605 )
text = "Scene"

[node name="ProjectMenu" type="MenuButton" parent="Margin/VBox/Titlebar/Left"]
margin_left = 55.0
margin_right = 115.0
margin_bottom = 28.0
focus_mode = 2
custom_styles/hover = SubResource( 2605 )
text = "Project"

[node name="EditorMenu" type="MenuButton" parent="Margin/VBox/Titlebar/Left"]
margin_left = 119.0
margin_right = 170.0
margin_bottom = 28.0
focus_mode = 2
custom_styles/hover = SubResource( 2605 )
text = "Editor"

[node name="HelpMenu" type="MenuButton" parent="Margin/VBox/Titlebar/Left"]
margin_left = 174.0
margin_right = 215.0
margin_bottom = 28.0
focus_mode = 2
custom_styles/hover = SubResource( 2605 )
text = "Help"

[node name="Center" type="HBoxContainer" parent="Margin/VBox/Titlebar"]
margin_left = 339.0
margin_right = 674.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1

[node name="2DButton" type="ToolButton" parent="Margin/VBox/Titlebar/Center"]
margin_left = 88.0
margin_right = 138.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "2D"
icon = ExtResource( 2 )

[node name="3DButton" type="ToolButton" parent="Margin/VBox/Titlebar/Center"]
margin_left = 142.0
margin_right = 192.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "3D"
icon = ExtResource( 8 )

[node name="ScriptButton" type="ToolButton" parent="Margin/VBox/Titlebar/Center"]
margin_left = 196.0
margin_right = 246.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "3D"
icon = ExtResource( 4 )

[node name="Right" type="HBoxContainer" parent="Margin/VBox/Titlebar"]
margin_left = 678.0
margin_right = 1014.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 2

[node name="PlayButton" type="ToolButton" parent="Margin/VBox/Titlebar/Right"]
margin_left = 244.0
margin_right = 272.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 7 )

[node name="PauseButton" type="ToolButton" parent="Margin/VBox/Titlebar/Right"]
margin_left = 276.0
margin_right = 304.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 9 )

[node name="StopButton" type="ToolButton" parent="Margin/VBox/Titlebar/Right"]
margin_left = 308.0
margin_right = 336.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 3 )

[node name="Docks" type="HSplitContainer" parent="Margin/VBox"]
margin_top = 32.0
margin_right = 1014.0
margin_bottom = 585.0
size_flags_vertical = 3
split_offset = 200

[node name="LeftDock" type="VSplitContainer" parent="Margin/VBox/Docks"]
margin_right = 210.0
margin_bottom = 553.0
split_offset = 160

[node name="TopTabs" type="TabContainer" parent="Margin/VBox/Docks/LeftDock"]
margin_right = 210.0
margin_bottom = 200.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="BottomTabs" type="TabContainer" parent="Margin/VBox/Docks/LeftDock"]
margin_top = 208.0
margin_right = 210.0
margin_bottom = 553.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="CenterRight" type="HSplitContainer" parent="Margin/VBox/Docks"]
margin_left = 218.0
margin_right = 1014.0
margin_bottom = 553.0
split_offset = -150

[node name="CenterDock" type="VSplitContainer" parent="Margin/VBox/Docks/CenterRight"]
margin_right = 628.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scenes" type="VBoxContainer" parent="Margin/VBox/Docks/CenterRight/CenterDock"]
margin_right = 628.0
margin_bottom = 553.0
custom_constants/separation = 0

[node name="Tabbar" type="HBoxContainer" parent="Margin/VBox/Docks/CenterRight/CenterDock/Scenes"]
margin_right = 628.0
margin_bottom = 30.0

[node name="Tabs" type="Tabs" parent="Margin/VBox/Docks/CenterRight/CenterDock/Scenes/Tabbar"]
margin_right = 628.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/tab_fg = SubResource( 2602 )
custom_styles/tab_bg = SubResource( 2601 )
tab_align = 0
tab_close_display_policy = 1
drag_to_rearrange_enabled = true

[node name="AddSceneButton" type="ToolButton" parent="Margin/VBox/Docks/CenterRight/CenterDock/Scenes/Tabbar/Tabs"]
margin_left = 950.0
margin_right = 978.0
margin_bottom = 30.0
hint_tooltip = "Add a new scene."
icon = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Margin/VBox/Docks/CenterRight/CenterDock/Scenes"]
show_behind_parent = true
margin_top = 30.0
margin_right = 628.0
margin_bottom = 553.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2599 )

[node name="RightDock" type="VSplitContainer" parent="Margin/VBox/Docks/CenterRight"]
margin_left = 636.0
margin_right = 796.0
margin_bottom = 553.0
split_offset = 250

[node name="TopTabs" type="TabContainer" parent="Margin/VBox/Docks/CenterRight/RightDock"]
margin_right = 160.0
margin_bottom = 553.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="BottomTabs" type="TabContainer" parent="Margin/VBox/Docks/CenterRight/RightDock"]
visible = false
margin_top = 298.0
margin_right = 160.0
margin_bottom = 553.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="AboutPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = -120.5
margin_right = 218.5
margin_bottom = 120.5

[node name="Panel" type="Panel" parent="AboutPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="AboutPopup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Text" type="RichTextLabel" parent="AboutPopup/Panel/Margin"]
margin_left = 20.0
margin_top = 10.0
margin_right = 427.0
margin_bottom = 221.0
size_flags_vertical = 3
custom_styles/normal = SubResource( 2606 )
bbcode_enabled = true
